--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/TFM
+spring.datasource.url=jdbc:mysql://localhost:3306/tfmrabat
 spring.datasource.username= root
 spring.datasource.password=
 spring.datasource.driverClassName= com.mysql.jdbc.Driver
